feat(auth): implement better-auth integration with drizzle and hono
Add database schema for authentication tables
Configure better-auth with drizzle adapter
Implement session and user management
Add constants and config for auth module
Set up husky and lint-staged for pre-commit checks

--- a/biome.json
+++ b/biome.json
@@ -1,24 +1,38 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.7.3/schema.json",
+  "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
   "vcs": {
     "enabled": true,
     "clientKind": "git",
     "useIgnoreFile": true
   },
   "files": {
-    "ignoreUnknown": false,
-    "ignore": []
-  },
-  "formatter": {
-    "enabled": true
-  },
-  "organizeImports": {
-    "enabled": true
+    "ignoreUnknown": false
   },
   "linter": {
-    "enabled": true,
     "rules": {
-      "recommended": true
+      "style": {
+        "useBlockStatements": "off",
+        "noMagicNumbers": "off"
+      },
+      "suspicious": {
+        "noConsole": "off"
+      },
+      "performance": {
+        "noNamespaceImport": "off"
+      },
+      "a11y": {
+        "useFocusableInteractive": "warn",
+        "useSemanticElements": "warn"
+      },
+      "nursery": {
+        "noShadow": "warn"
+      }
     }
-  }
+  },
+  "formatter": {
+    "lineWidth": 100
+  },
+  "extends": [
+    "ultracite"
+  ]
 }
