--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,5 +35,8 @@
   "yaml.schemas": {
     "https://www.artillery.io/schema.json": []
   },
-  "cSpell.words": ["klyp", "orpc"]
+  "cSpell.words": [
+    "klyp",
+    "orpc"
+  ]
 }
