--- a/package.json
+++ b/package.json
@@ -33,13 +33,20 @@
     "turbo"
   ],
   "devDependencies": {
-    "@biomejs/biome": "^2.2.5",
+    "@biomejs/biome": "2.2.4",
     "bun-types": "latest",
-    "turbo": "^2.5.5"
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.3",
+    "turbo": "^2.5.5",
+    "ultracite": "5.4.7"
   },
   "peerDependencies": {
     "typescript": "^5.7.3"
   },
-  "dependencies": {
+  "dependencies": {},
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,json,jsonc,css,scss,md,mdx}": [
+      "bun x ultracite fix"
+    ]
   }
 }
