--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
     "shared": "workspace:*"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/pg": "^8.15.5",
+    "drizzle-kit": "^0.31.5"
   }
 }
