--- a/server/package.json
+++ b/server/package.json
@@ -5,18 +5,46 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "bun --watch run src/index.ts && tsc --watch"
+    "dev": "bun --watch run src/index.ts && tsc --watch",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:coverage": "vitest --coverage",
+    "test:ui": "vitest --ui",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "hono": "^4.6.16",
     "hono-pino": "^0.10.1",
     "pino": "^9.7.0",
     "pino-pretty": "^13.1.1",
-    "shared": "workspace:*"
+    "shared": "workspace:*",
+    "@hono/zod-validator": "^0.2.0",
+    "drizzle-orm": "^0.36.0",
+    "postgres": "^3.4.0",
+    "pg": "^8.12.0",
+    "zod": "^3.22.0",
+    "jose": "^5.0.0",
+    "@simplewebauthn/server": "^9.0.0",
+    "nodemailer": "^6.9.0",
+    "arctic": "^1.0.0",
+    "bcrypt": "^5.1.0",
+    "hono-rate-limiter": "^0.4.0",
+    "argon2": "^0.40.0",
+    "crypto": "^1.0.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/bun": "latest",
+    "@types/nodemailer": "^6.4.0",
     "@types/pg": "^8.15.5",
-    "drizzle-kit": "^0.31.5"
+    "@types/supertest": "^6.0.3",
+    "@types/uuid": "^9.0.0",
+    "@vitest/ui": "^3.2.4",
+    "drizzle-kit": "^0.28.0",
+    "supertest": "^7.1.4",
+    "vitest": "^3.2.4"
   }
 }
