--- a/package.json
+++ b/package.json
@@ -33,15 +33,15 @@
     "turbo"
   ],
   "devDependencies": {
-    "@biomejs/biome": "2.2.4",
-    "bun-types": "latest",
+    "@biomejs/biome": "2.2.5",
+    "bun-types": "1.3.0",
     "husky": "^9.1.7",
-    "lint-staged": "^16.2.3",
-    "turbo": "^2.5.5",
-    "ultracite": "5.4.7"
+    "lint-staged": "^16.2.4",
+    "turbo": "^2.5.8",
+    "ultracite": "5.6.2"
   },
   "peerDependencies": {
-    "typescript": "^5.7.3"
+    "typescript": "^5.9.3"
   },
   "dependencies": {},
   "lint-staged": {
