--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/vite": "^4.1.10",
+    "@tanstack/react-form": "^1.23.7",
     "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-router": "^1.132.31",
     "@tanstack/react-router-devtools": "^1.132.31",
