--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -18,11 +18,14 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
     "baseUrl": ".",
-       "paths": {
-         "@/*": [
-           "./src/*"
-         ]
-       }
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
-  "include": ["src"]
+  "include": ["src"],
+  "references": [
+    {
+      "path": "../server"
+    }
+  ]
 }
