--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,26 +1,20 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    // Environment settings
     "lib": ["ESNext"],
     "target": "ESNext",
     "module": "ESNext",
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx",
-
-    // Types
     "types": ["bun-types"],
-
-    // Output settings
     "declaration": true,
     "outDir": "dist",
     "noEmit": false,
     "emitDecoratorMetadata": true,
-
-    // Module resolution
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": false
   },
   "include": ["src/**/*"],
+  "composite": true,
   "exclude": ["node_modules", "dist"]
 }
