feat: implement sign-in and sign-up forms with email authentication

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -12,9 +12,9 @@
     "noEmit": false,
     "emitDecoratorMetadata": true,
     "moduleResolution": "bundler",
-    "allowImportingTsExtensions": false
+    "allowImportingTsExtensions": false,
+    "composite": true
   },
   "include": ["src/**/*"],
-  "composite": true,
   "exclude": ["node_modules", "dist"]
 }
