--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-router": "^1.132.31",
     "@tanstack/react-router-devtools": "^1.132.31",
+    "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "input-otp": "^1.4.2",
