refactor: move auth routes to dedicated router module

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "bun-hono-react-saas-starter",
   "version": "0.4.0",
   "description": "A monorepo template built with Bun, Hono, Vite, and React",
-  "author": "Steve Simkins",
+  "author": "Nalaka Manathunga",
   "license": "MIT",
-  "homepage": "https://github.com/stevedylandev/bhvr",
+  "homepage": "https://github.com/nalakamanathunga/bun-hono-react-saas-starter",
   "packageManager": "bun@1.2.4",
   "workspaces": [
     "./server",
