--- a/server/package.json
+++ b/server/package.json
@@ -16,35 +16,34 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
-    "hono": "^4.6.16",
-    "hono-pino": "^0.10.1",
-    "pino": "^9.7.0",
-    "pino-pretty": "^13.1.1",
-    "shared": "workspace:*",
-    "@hono/zod-validator": "^0.2.0",
-    "drizzle-orm": "^0.36.0",
-    "postgres": "^3.4.0",
-    "pg": "^8.12.0",
-    "zod": "^3.22.0",
-    "jose": "^5.0.0",
-    "@simplewebauthn/server": "^9.0.0",
-    "nodemailer": "^6.9.0",
-    "arctic": "^1.0.0",
-    "bcrypt": "^5.1.0",
-    "hono-rate-limiter": "^0.4.0",
-    "argon2": "^0.40.0",
+    "@hono/zod-validator": "^0.7.4",
+    "arctic": "^3.7.0",
+    "bcrypt": "^6.0.0",
     "crypto": "^1.0.1",
-    "uuid": "^9.0.0"
+    "drizzle-orm": "^0.44.6",
+    "hono": "^4.9.12",
+    "hono-pino": "^0.10.1",
+    "hono-rate-limiter": "^0.4.0",
+    "jose": "^6.1.0",
+    "nanoid": "^5.1.6",
+    "nodemailer": "^7.0.9",
+    "pg": "^8.12.0",
+    "pino": "^10.0.0",
+    "pino-pretty": "^13.1.1",
+    "postgres": "^3.4.0",
+    "shared": "workspace:*",
+    "uuid": "^13.0.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
+    "@types/bcrypt": "^6.0.0",
     "@types/bun": "latest",
-    "@types/nodemailer": "^6.4.0",
+    "@types/nodemailer": "^7.0.2",
     "@types/pg": "^8.15.5",
     "@types/supertest": "^6.0.3",
-    "@types/uuid": "^9.0.0",
+    "@types/uuid": "^11.0.0",
     "@vitest/ui": "^3.2.4",
-    "drizzle-kit": "^0.28.0",
+    "drizzle-kit": "^0.31.5",
     "supertest": "^7.1.4",
     "vitest": "^3.2.4"
   }
