--- a/biome.json
+++ b/biome.json
@@ -18,7 +18,8 @@
         "noConsole": "off"
       },
       "performance": {
-        "noNamespaceImport": "off"
+        "noNamespaceImport": "off",
+        "noImgElement": "off"
       },
       "a11y": {
         "useFocusableInteractive": "warn",
@@ -32,7 +33,5 @@
   "formatter": {
     "lineWidth": 100
   },
-  "extends": [
-    "ultracite"
-  ]
+  "extends": ["ultracite"]
 }
