--- a/server/.env.example
+++ b/server/.env.example
@@ -1,28 +1,29 @@
-DATABASE_URL=
-CORS_ORIGIN=
-BETTER_AUTH_SECRET=
-BETTER_AUTH_URL=
-POLAR_ACCESS_TOKEN=
-POLAR_SUCCESS_URL=
+DATABASE_URL=postgresql://postgres:password@localhost:5432/postgres
+CORS_ORIGIN=http://localhost:5173
+BETTER_AUTH_SECRET=secret
+BETTER_AUTH_URL=http://localhost:3000
+POLAR_ACCESS_TOKEN=secret
+POLAR_SUCCESS_URL=http://localhost:3001/success?checkout_id={CHECKOUT_ID}
 
-# Cloudflare Stream Configuration
-CLOUDFLARE_ACCOUNT_ID=
-CLOUDFLARE_API_TOKEN=
-CLOUDFLARE_WEBHOOK_SECRET=
+# Redis Configuration
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_DB=0
+
+POSTGRES_DB=postgres
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=password
 
 # Redis / BullMQ
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
 REDIS_DB=0
-# REDIS_PASSWORD=
 BULL_PREFIX=bull
 
 # Queue flags (enable with: 1|true|yes|on)
 Q_EMAIL_ENABLED=1
 Q_VIDEO_TRANSCODE_ENABLED=1
 Q_ANALYTICS_ENABLED=1
-
-# Queue tunables
-# Optional: adjust attempts/backoff for the videoTranscode polling worker
 Q_VIDEO_TRANSCODE_ATTEMPTS=10
 Q_VIDEO_TRANSCODE_BACKOFF_MS=30000
