--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "@tanstack/react-router": "^1.132.31",
     "@tanstack/react-router-devtools": "^1.132.31",
     "@tanstack/react-table": "^8.21.3",
+    "better-auth": "^1.3.27",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "input-otp": "^1.4.2",
