--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
-name: bun-hono-react-saas-starter
+name: open-pulse
 
 services:
   postgres:
     image: postgres:17.4
-    container_name: bun-hono-react-saas-starter-postgres
+    container_name: open-pulse-postgres
     environment:
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_USER=${POSTGRES_USER}
@@ -11,7 +11,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - bun-hono-react-saas-starter_postgres_data:/var/lib/postgresql/data
+      - open-pulse_postgres_data:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
@@ -20,4 +20,4 @@ services:
     restart: unless-stopped
 
 volumes:
-  bun-hono-react-saas-starter_postgres_data:
+  open-pulse_postgres_data:
