--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "@hono/zod-validator": "^0.7.4",
     "arctic": "^3.7.0",
     "bcrypt": "^6.0.0",
+    "better-auth": "^1.3.27",
     "crypto": "^1.0.1",
     "drizzle-orm": "^0.44.6",
     "hono": "^4.9.12",
