--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@clickhouse/client": "^1.12.1",
     "@hono/zod-validator": "^0.7.4",
     "arctic": "^3.7.0",
     "bcrypt": "^6.0.0",
