chore: add Clickhouse credentials and remove Redis config from env examples

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 POSTGRES_DB=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
+
+CLICKHOUSE_DB=clickhouse
+CLICKHOUSE_USER=clickhouse
+CLICKHOUSE_PASSWORD=password
