--- a/server/.env.example
+++ b/server/.env.example
@@ -15,11 +15,9 @@ POSTGRES_DB=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
 
-# Redis / BullMQ
-REDIS_HOST=127.0.0.1
-REDIS_PORT=6379
-REDIS_DB=0
-BULL_PREFIX=bull
+CLICKHOUSE_DB=clickhouse
+CLICKHOUSE_USER=clickhouse
+CLICKHOUSE_PASSWORD=password
 
 # Queue flags (enable with: 1|true|yes|on)
 Q_EMAIL_ENABLED=1
