feat: initialize Clickhouse client and create analytics_event table schema

--- a/server/.env.example
+++ b/server/.env.example
@@ -15,6 +15,7 @@ POSTGRES_DB=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
 
+CLICKHOUSE_HOST=localhost:8123
 CLICKHOUSE_DB=clickhouse
 CLICKHOUSE_USER=clickhouse
 CLICKHOUSE_PASSWORD=password
