docs: add comprehensive test suite documentation and configuration

--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,12 @@
     "dev": "bun --watch run src/index.ts | pino-pretty && tsc --watch",
     "test": "vitest",
     "test:watch": "vitest --watch",
+    "test:unit": "vitest tests/unit",
+    "test:unit:watch": "vitest --watch tests/unit",
+    "test:integration": "vitest tests/integration",
+    "test:integration:watch": "vitest --watch tests/integration",
+    "test:e2e": "vitest tests/e2e",
+    "test:e2e:watch": "vitest --watch tests/e2e",
     "test:coverage": "vitest --coverage",
     "test:ui": "vitest --ui",
     "db:push": "drizzle-kit push",
