--- a/biome.json
+++ b/biome.json
@@ -6,7 +6,8 @@
     "useIgnoreFile": true
   },
   "files": {
-    "ignoreUnknown": false
+    "ignoreUnknown": false,
+    "experimentalScannerIgnores": ["./server/src/analytics-script/analytics.js"]
   },
   "linter": {
     "rules": {
