feat: enhance analytics tracking system with ClickHouse integration
- Added ClickHouse port mappings (8123, 9000) in docker-compose for external access
- Updated analytics_event table schema with new performance metrics (lcp, cls, inp, fcp, ttfb) and nullable fields
- Implemented dependency initialization system with ClickHouse setup on startup
- Simplified tracking route structure by moving handlers directly into app.ts
- Added error handling for ClickHouse setup with detailed logging
- Reorgan

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,9 @@ services:
       - CLICKHOUSE_DB=${CLICKHOUSE_DB:-analytics}
       - CLICKHOUSE_USER=${CLICKHOUSE_USER:-default}
       - CLICKHOUSE_PASSWORD=${CLICKHOUSE_PASSWORD:-frog}
+    ports:
+      - "8123:8123"
+      - "9000:9000"
     healthcheck:
       test:
         [
